fixing experience text align jusstify

--- a/src/Components/Experience/style.css
+++ b/src/Components/Experience/style.css
@@ -30,7 +30,7 @@
 
   .career .line {
     width: 70px;
-    height: 19px;
+    height: 20px;
   }
 
   .career .point {
